# gander

./: Cargo.toml
example_fleet/inventory/: bar.toml  defaults.toml  foo.toml
roadmap/: auth.md
src/: inventory.rs  main.rs  playbook.rs
